syntax = "proto3";

package proto;

option go_package = "app/main/proto";

import "google/protobuf/timestamp.proto";

service AuthUsersService {

    rpc GetUser(GetUserRequest) returns (User) {}
}

message GetUserRequest {
    string id = 1;
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}